fix: gap, width calculation

--- a/assets/style.css
+++ b/assets/style.css
@@ -33,10 +33,11 @@ main {
         align-items: center;
         flex-wrap: wrap;
         padding: 3rem;
+        gap: 2rem;
 
         .card {
             background-color: #ffffff;
-            width: calc((100% /12) * 4);
+            width: calc((100% /12) * 3);
             position: relative;
 
             img.pin {
